--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 margin-bottom: 20px;
             }
             #yesButton, #no {
-                width: 120px;
+                min-width: 120px;
                 height: 50px;
                 font-size: 18px;
                 color: #fff;
@@ -34,6 +34,7 @@
                 border-radius: 10px;
                 cursor: pointer;
                 margin: 10px;
+                padding: 10px;
             }
             #yesButton {
                 background-color: #06d6a0;
@@ -41,6 +42,9 @@
             #no {
                 background-color: #ef476f;
                 position: relative;
+                display: inline-block;
+                white-space: nowrap;
+                padding: 10px 15px;
             }
             #messageContent {
                 display: none;
@@ -50,7 +54,7 @@
                     font-size: 20px;
                 }
                 #yesButton, #no {
-                    width: 100px;
+                    min-width: 100px;
                     height: 40px;
                     font-size: 16px;
                 }
@@ -96,6 +100,8 @@
             function change() {
                 var randomIndex = Math.floor(Math.random() * noTexts.length);
                 no.innerText = noTexts[randomIndex];
+                no.style.width = "auto";
+                no.style.padding = "10px 15px";
 
                 var i = Math.floor(Math.random() * window.innerWidth * 0.8);
                 var j = Math.floor(Math.random() * window.innerHeight * 0.8);
